Adding usecases for load task from microservice