@@ -30,10 +30,16 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'io.projectreactor:reactor-test'
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('io.projectreactor:reactor-test')
+    testImplementation('org.hamcrest:hamcrest-library:2.2')
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
+    jvmArgs '--enable-preview'
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
